# stmflasher

./: CMakeLists.txt  INSTALL  NEWS  README  main.c  serial.h  serial_common.c  serial_posix.c  serial_w32.c  stm32.c  stm32.h  utils.c  utils.h
parsers/: binary.c  binary.h  hex.c  hex.h  parser.h
